# space_raiders

./: .gitignore  CMakeLists.txt  README.md
cmake_find/: FindSDL2_gfx.cmake
game/: Alien.cpp  Alien.h  AlienLaser.cpp  AlienLaser.h  Background.cpp  Background.h  Engine.cpp  Engine.h  Explosion.cpp  Explosion.h  GameObject.h  GameScene.cpp  GameScene.h  Input.h  MenuScene.cpp  MenuScene.h  Player.cpp  Player.h  PlayerLaser.cpp  PlayerLaser.h  Random.cpp  Random.h  Scene.h  ScoreHelper.cpp  SplashScene.cpp  SplashScene.h  Sprite.h  Vec2.h  Version.h  main.cpp  olc.cpp  olc.h  olc_sdl.h
game/Game/: Engine.cpp  Engine.h  olc.h
game/GameObjects/Alien/: Alien.cpp  Alien.h
game/GameObjects/Background/: Background.cpp  Background.h
game/GameObjects/Base/: GameObject.h
game/GameObjects/Explosion/: Explosion.cpp  Explosion.h
game/GameObjects/Laser/: AlienLaser.cpp  AlienLaser.h  PlayerLaser.cpp  PlayerLaser.h
game/GameObjects/Player/: Player.cpp  Player.h
game/Graphics/: Sprite.h
game/Input/: Input.h
game/Maths/: Random.cpp  Vec2.h
game/Scenes/Base/: Scene.h
game/Scenes/GameScene/: GameScene.cpp  GameScene.h
game/Scenes/MenuScene/: MenuScene.cpp  MenuScene.h
game/Scenes/SplashScene/: SplashScene.cpp  SplashScene.h
game/Utils/: Macros.h  ScoreHelper.cpp  ScoreHelper.h
resources/: play.bat  readme-release.txt
scripts/: build-game.ps1  build.sh  build_windows.cmd  build_windows.ps1  bump_version.sh  generate-release-zip.ps1
vs.proj/: spaceraiders.sln  spaceraiders.vcxproj  spaceraiders.vcxproj.filters
